--- a/src/components.pneumatics/app/apax.yml
+++ b/src/components.pneumatics/app/apax.yml
@@ -5,7 +5,8 @@ targets:
   - axunit-llvm
   - plcsim
 devDependencies:
-  "@ax/sdk": 4.0.3
+  "@ax/sdk": 4.0.12
+  "@ax/sld": 0.15.9
 dependencies:
   "@ix-ax/axopen.components.pneumatics": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
