--- a/src/components.pneumatics/ctrl/apax.yml
+++ b/src/components.pneumatics/ctrl/apax.yml
@@ -12,7 +12,7 @@ variables:
   AXUNIT_TARGET_IP: "172.20.30.110"
   SIM_ENABLED: "true"
 devDependencies:
-  "@ax/sdk": ^4.0.3
+  "@ax/sdk": 4.0.12
 dependencies:
   "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
