--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -9,7 +9,7 @@ files:
 dependencies:
   "@ix-ax/axopen.core": '0.0.0-dev.0'
 devDependencies:
-  "@ax/sdk": ^4.0.8
+  "@ax/sdk": 4.0.12
 variables:
   APAX_BUILD_ARGS: [ -d ]
 
