--- a/src/components.cognex.vision/app/apax.yml
+++ b/src/components.cognex.vision/app/apax.yml
@@ -6,7 +6,7 @@ targets:
   - axunit-llvm
   #- "1500" 
 devDependencies:
-  "@ax/sdk": ^4.0.8
+  "@ax/sdk": 4.0.12
   "@ax/sld": 0.15.9
   "@ax/stc": ^5.4.89
 dependencies:
