--- a/src/components.elements/ctrl/apax.yml
+++ b/src/components.elements/ctrl/apax.yml
@@ -8,7 +8,7 @@ files:
   - src
   - axsharp.companion.json
 devDependencies:
-  "@ax/sdk": ^4.0.3
+  "@ax/sdk": 4.0.12
 scripts:
   postbuild:
     - dotnet ixc        
