--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -7,7 +7,7 @@ files:
   - src
   - axsharp.companion.json
 devDependencies:
-  "@ax/sdk": ^4.0.8
+  "@ax/sdk": 4.0.12
   "@ax/stc": 5.4.89
 scripts:
   postbuild:
