--- a/src/integrations/app/apax.yml
+++ b/src/integrations/app/apax.yml
@@ -5,7 +5,7 @@ targets:
   - axunit-llvm
   - plcsim
 devDependencies:
-  "@ax/sdk": ^4.0.8
+  "@ax/sdk": 4.0.12
   "@ax/sld": ^0.15.9
 dependencies:
   "@ix-ax/axopen.data": '0.0.0-dev.0'
