--- a/src/templates.simple/app/apax.yml
+++ b/src/templates.simple/app/apax.yml
@@ -3,6 +3,8 @@ version: '0.0.0-dev.0'
 type: app
 targets:
   - plcsim
+  # - swcpu 
+  #- "1500"
   - axunit-llvm
 registries:
   '@ix-ax': https://npm.pkg.github.com/
