--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1858,6 +1858,16 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "../src/templates.simple/axosimple.app/wwwroot/logo-axopen-no-background.svg",
+      "output": {
+        "resource": {
+          "relative_path": "templates.simple/axosimple.app/wwwroot/logo-axopen-no-background.svg"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "../src/templates.simple/axosimple.app/wwwroot/logo-header.svg",
       "output": {
         "resource": {
