--- a/src/templates.simple/axosimple.twin/axosimple.csproj
+++ b/src/templates.simple/axosimple.twin/axosimple.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<ImplicitUsings>true</ImplicitUsings>
 	<UseProjectReference>true</UseProjectReference>
   </PropertyGroup>
 
