--- a/src/templates.simple/axpansion/server/axosimple.server.csproj
+++ b/src/templates.simple/axpansion/server/axosimple.server.csproj
@@ -77,6 +77,7 @@
 		</EmbeddedResource>
 	</ItemGroup>
 	<ItemGroup>
+		<Folder Include="Pages\Context\Units\" />
 		<Folder Include="wwwroot\js\" />
 	</ItemGroup>
 </Project>
