--- a/src/components.rexroth.drives/ctrl/apax.yml
+++ b/src/components.rexroth.drives/ctrl/apax.yml
@@ -14,3 +14,4 @@ dependencies:
   "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
   "@ix-ax/axopen.components.drives": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
+  "@ax/system-bitaccess": ^5.0.60
