--- a/src/components.drives/ctrl/AXSharp.config.json
+++ b/src/components.drives/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Components.Drives","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Components.Drives","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_components_drives.csproj"}
