--- a/src/components.rexroth.drives/ctrl/AXSharp.config.json
+++ b/src/components.rexroth.drives/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Components.Rexroth.Drives","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Components.Rexroth.Drives","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_components_rexroth_drives.csproj"}
