--- a/src/components.rexroth.drives/src/AXOpen.Components.Rexroth.Drives/ix_ax_axopen_components_rexroth_drives.csproj
+++ b/src/components.rexroth.drives/src/AXOpen.Components.Rexroth.Drives/ix_ax_axopen_components_rexroth_drives.csproj
@@ -81,5 +81,6 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\components.drives\src\AXOpen.Components.Drives\ix_ax_axopen_components_drives.csproj" />
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
+	  <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
 	</ItemGroup>
 </Project>
