docu bugs fixed

--- a/src/components.drives/app/apax.yml
+++ b/src/components.drives/app/apax.yml
@@ -8,14 +8,15 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ax/sdk": ^4.0.8
+  "@ax/sdk": ^4.0.12
+  "@ax/stc": ^5.4.98
   "@ax/sld": 0.15.9
 dependencies:
   "@ix-ax/axopen.components.drives": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
 scripts:
   download:
-    - apax install -L
+    - apax install
     - apax build
     - dotnet ixc
     - apax sld -i $AXTARGETPLATFORMINPUT -t $AXTARGET
