Rename to VisualComposer. Presentation options changed.

--- a/src/base/src/AXOpen.VisualComposer/AXOpen.VisualComposer.csproj
+++ b/src/base/src/AXOpen.VisualComposer/AXOpen.VisualComposer.csproj
@@ -3,8 +3,8 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<PackageId>Draggable</PackageId>
-		<RootNamespace>Draggable</RootNamespace>
+		<PackageId>AXOpen.VisualComposer</PackageId>
+		<RootNamespace>AXOpen.VisualComposer</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
