--- a/src/templates.simple/axpansion/server/axosimple.server.csproj
+++ b/src/templates.simple/axpansion/server/axosimple.server.csproj
@@ -77,7 +77,13 @@
 		</EmbeddedResource>
 	</ItemGroup>
 	<ItemGroup>
-		<Folder Include="Pages\Context\Units\" />
 		<Folder Include="wwwroot\js\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Content Include="..\..\ax\src\templates\starterunit\server\StarterUnitTemplate.razor" Link="Pages\Context\Units\StarterUnitTemplate.razor" />
+	  <Content Include="..\..\ax\src\templates\unit\server\UnitTemplate.razor" Link="Pages\Context\Units\UnitTemplate.razor" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\base\src\AXOpen.VisualComposer\AXOpen.VisualComposer.csproj" />
 	</ItemGroup>
 </Project>
