--- a/src/inspectors/app/apax.yml
+++ b/src/inspectors/app/apax.yml
@@ -21,3 +21,53 @@ scripts:
     - dotnet ixc
     - apax sld -i $AXTARGETPLATFORMINPUT -t $AXTARGET
       --accept-security-disclaimer --default-server-interface -r
+  ixc:
+    - START=$(date +%s)
+    - dotnet tool restore
+    - dotnet ixc
+    - echo "Built by ixc in :" $(expr $(date +%s) - $START) "s"
+  download_only:
+    - START=$(date +%s)
+    - apax sld --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r --default-server-interface -l Debug
+    - echo "Downloaded in :" $(expr $(date +%s) - $START) "s"
+  check+download: |
+    if [ $AXTARGET ]; then
+      if [ $AXTARGETPLATFORMINPUT ]; then
+        if ping -n 1 $AXTARGET &> /dev/null; then
+          echo "Downloading from:" $AXTARGETPLATFORMINPUT "=>" $AXTARGET
+          apax download_only
+        else
+          echo "Target with IP address:" $AXTARGET "is not accessible. No download is going to be performed!!!"
+        fi
+      else
+        echo "Environment variable AXTARGETPLATFORMINPUT not defined!!!"
+      fi
+    else
+      echo "Environment variable AXTARGET not defined!!!"
+    fi
+  postbuild:
+    - apax ixc
+  watch:
+    - dotnet watch --project
+      ..\\app\\ix-blazor\\AXOpen.Components.Rexroth.Drives.blazorapp.csproj
+  fr:
+    - ..\\..\\integrations\\scripts\\StartPlcSimAdvCli.exe
+    - apax rr
+  frw:
+    - apax fr
+    - apax watch
+  rr:
+    - START=$(date +%s)
+    - apax install
+    - apax build
+    - apax ixc
+    - apax download_only
+    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in
+      :" $(expr $(date +%s) - $START) "s"
+  rrw:
+    - apax rr
+    - apax watch
+  r:
+    - apax plc-mode set stop -t $AXTARGET -y
+    - apax plc-mode set run -t $AXTARGET -y
