Change AxoObject into ITwinObject[]. Change HumanReadable into Symbol. Repair bugs. Add some visual adjustments.

--- a/src/base/src/AXOpen.VisualComposer/AXOpen.VisualComposer.csproj
+++ b/src/base/src/AXOpen.VisualComposer/AXOpen.VisualComposer.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" />
 		<PackageReference Include="AXSharp.Abstractions" />
 		<PackageReference Include="AXSharp.Connector" />
 		<PackageReference Include="AXSharp.Presentation.Blazor" />
