--- a/src/simatic1500/ctrl/ix/ix_ax_axopen_simatic1500.csproj
+++ b/src/simatic1500/ctrl/ix/ix_ax_axopen_simatic1500.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		
+	<PropertyGroup>		
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PackageId>AXOpen.S71500</PackageId>
+    	<RootNamespace>AXOpen.S71500</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
