--- a/src/templates.simple/ax/apax.yml
+++ b/src/templates.simple/ax/apax.yml
@@ -12,10 +12,11 @@ devDependencies:
   "@ax/sdk": 4.0.12
   "@ax/sld": 2.0.5
 dependencies:
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
   "@ix-ax/axopen.data": '0.0.0-dev.0'
   "@ix-ax/axopen.inspectors": '0.0.0-dev.0' 
-  "@ix-ax/axopen.components.pneumatics": '0.0.0-dev.0'
   "@ix-ax/axopen.components.elements": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.pneumatics": '0.0.0-dev.0'
   "@ix-ax/axopen.components.cognex.vision": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'    
 variables:
