--- a/src/templates.simple/axpansion/twin/axosimple.csproj
+++ b/src/templates.simple/axpansion/twin/axosimple.csproj
@@ -8,7 +8,7 @@
 		<UseProjectReference>true</UseProjectReference>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(UseProjectReference)' == 'false'">
+	<!--<ItemGroup Condition="'$(UseProjectReference)' == 'false'">
 		<PackageReference Include="AXOpen.Core" Version="0.4.3-alpha.229" />
 		<PackageReference Include="AXOpen.Data" Version="0.4.3-alpha.229" />
 		<PackageReference Include="AXOpen.Inspectors" Version="0.4.3-alpha.229" />
@@ -22,7 +22,7 @@
 		<PackageReference Include="AXSharp.Abstractions" Version="0.18.0-alpha.177" />
 		<PackageReference Include="AXSharp.Connector" Version="0.18.0-alpha.177" />
 		<PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.18.0-alpha.177" />
-	</ItemGroup>
+	</ItemGroup>-->
 
 	<ItemGroup Condition="'$(UseProjectReference)' == 'true'">
 		<PackageReference Include="AXSharp.Abstractions" />
