working on security with mongo

--- a/src/Security/tests/axopen_security_tests/AXOpen.SecurityTests_L1.csproj
+++ b/src/Security/tests/axopen_security_tests/AXOpen.SecurityTests_L1.csproj
@@ -24,6 +24,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\data\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
+    <ProjectReference Include="..\..\..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
+    <ProjectReference Include="..\..\..\data\src\repositories\MongoDb\AXOpen.Data.MongoDb.csproj" />
+    <ProjectReference Include="..\..\..\data\src\repositories\RavenDb\AXOpen.Data.RavenDb\AXOpen.Data.RavenDb.csproj" />
     <ProjectReference Include="..\..\src\AXOpen.Security\AXOpen.Security.csproj" />
   </ItemGroup>
 
