--- a/src/template.axolibrary/app/apax.yml
+++ b/src/template.axolibrary/app/apax.yml
@@ -3,12 +3,12 @@ version: 0.0.0
 type: app
 targets:
   - plcsim
-  - axunit-llvm
+  - llvm
 variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ax/sdk": 4.0.12
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
   "@ax/sld": 2.0.5
 dependencies:
   "@ix-ax/apaxlibname": '0.0.0-dev.0'
