--- a/src/components.cognex.vision/ctrl/apax.yml
+++ b/src/components.cognex.vision/ctrl/apax.yml
@@ -2,12 +2,12 @@ name: "@ix-ax/axopen.components.cognex.vision"
 version: '0.0.0-dev.0'
 type: lib
 targets:
-  - axunit-llvm
+  - llvm
 files:
   - src
   - axsharp.companion.json
 devDependencies:
-  "@ax/sdk": 4.0.12
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 scripts:
   # prebuild:
   #   - dotnet ixc
