--- a/src/components.rexroth.drives/app/apax.yml
+++ b/src/components.rexroth.drives/app/apax.yml
@@ -3,15 +3,13 @@ version: 0.0.0
 type: app
 targets:
   #- plcsim
-  - axunit-llvm
+  - llvm
   - "1500"
 variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ax/sdk": ^4.0.12
-  "@ax/stc": ^5.4.98
-  "@ax/sld": 2.0.5
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'   
 dependencies:
   "@ix-ax/axopen.components.rexroth.drives": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
