--- a/src/components.rexroth.drives/ctrl/apax.yml
+++ b/src/components.rexroth.drives/ctrl/apax.yml
@@ -2,12 +2,12 @@ name: "@ix-ax/axopen.components.rexroth.drives"
 version: '0.0.0-dev.0'
 type: lib
 targets:
-  - axunit-llvm
+  - llvm
 files:
   - src
   - assets
 devDependencies:
-  "@ax/sdk": ^4.0.8
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 scripts:
   postbuild:
     - dotnet ixc
@@ -15,4 +15,4 @@ dependencies:
   "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
   "@ix-ax/axopen.components.drives": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
-  "@ax/system-bitaccess": ^5.0.60
+  "@ax/system-bitaccess": ^6.0.94
