--- a/src/data/ctrl/apax.yml
+++ b/src/data/ctrl/apax.yml
@@ -2,14 +2,14 @@ name: "@ix-ax/axopen.data"
 version: '0.0.0-dev.0'
 type: lib
 targets:
-  - axunit-llvm
+  - llvm
 files:
   - src
   - axsharp.companion.json
 dependencies:
   "@ix-ax/axopen.core": '0.0.0-dev.0'
 devDependencies:
-  "@ax/sdk": 4.0.12
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 scripts:
   postbuild:
     - dotnet ixc
