--- a/src/integrations/app/apax.yml
+++ b/src/integrations/app/apax.yml
@@ -2,11 +2,10 @@ name: "axopen.integrations"
 version: '0.0.0-dev.0'
 type: app
 targets:
-  - axunit-llvm
+  - llvm
   - plcsim
 devDependencies:
-  "@ax/sdk": 4.0.12
-  "@ax/sld": 2.0.5
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 dependencies:
   "@ix-ax/axopen.data": '0.0.0-dev.0'
   "@ix-ax/axopen.probers": '0.0.0-dev.0'
