--- a/src/timers/ctrl/apax.yml
+++ b/src/timers/ctrl/apax.yml
@@ -2,13 +2,12 @@ name: "@ix-ax/axopen.timers"
 version: '0.0.0-dev.0'
 type: lib
 targets:
-  - axunit-llvm
+  - llvm
 files:
   - src
   - axsharp.companion.json
 devDependencies:
-  "@ax/sdk": 4.0.12
-  "@ax/stc": ^5.4.89
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'  
 dependencies:
   "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
 publicKeys:
